fixed paragraph alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 /*MAIN DOCUMENT STYLING*/
 
-*{
+* {
     box-sizing: border-box;
     color: black;
     font-family: 'Roboto Mono', monospace;
 }
 
-body{
+body {
     width: 100%;
     background-color: #e0f3f5;
     margin: 0px auto;
@@ -16,7 +16,7 @@ body{
 /*END OF MAIN DOCUMENT STYLING*/
 
 /*HEADER STYLING*/
-#main-header{
+#main-header {
     text-align: center;
     padding: 1em;
     border-top: 2px solid #a3dbe1;
@@ -24,7 +24,7 @@ body{
     border-left: 2px solid #a3dbe1;
 }
 
-#contact-bar{
+#contact-bar {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -36,54 +36,57 @@ body{
     border-left: 2px solid #a3dbe1;
 }
 
-#contact-bar a{
+#contact-bar a {
     text-decoration: none;
 }
 
-#contact-bar h4{
+#contact-bar h4 {
     margin: 8px auto;
 }
+
 /*MAIN BODY CONTAINER STYLING*/
 
-.main-body-container{
+.main-body-container {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.columns{
+.columns {
     text-align: center;
     border: 2px solid #a3dbe1;
     padding: 1em;
 }
 
-#right-column{
+#right-column {
     background-color: #f9cdc8;
 }
 
-#right-column p{
+#right-column p {
     margin: 10px auto;
+    padding-bottom: 15px;
 }
 
-.columns h4{
+.columns h4 {
     margin: 1px auto;
 }
 
-.columns h5{
+.columns h5 {
     margin: 1px auto;
 }
 
-#skills{
+#skills {
     list-style-type: none;
     text-align: center;
     padding: 1em;
     margin-top: 0;
 }
-#left-column h3{
+
+#left-column h3 {
     margin-bottom: 0;
 }
 
-footer{
+footer {
     width: 100%;
     font-size: .75em;
     text-align: center;
@@ -93,50 +96,51 @@ footer{
     border-left: 2px solid #a3dbe1;
 }
 
-footer a{
+footer a {
     text-decoration: none;
 }
 
 
 /*STYLING FOR LARGER SCREENS STARTS HERE*/
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
 
-    #contact-bar{
+    #contact-bar {
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-evenly ;
+        justify-content: space-evenly;
     }
-    #left-column{
+
+    #left-column {
         width: 50%;
     }
 
-    #right-column{
+    #right-column {
         width: 50%;
         background-color: inherit;
     }
 
-    .main-body-container{
+    .main-body-container {
         flex-direction: row;
     }
 
-   .columns{
-       text-align: left;
-       padding: 1em 0 1em 1em;
-   }
+    .columns {
+        text-align: left;
+        padding: 1em 0 1em 1em;
+    }
 
-   #skills{
-       text-align: left;
-       columns: 2;
-       list-style-type: disc;
-   }
+    #skills {
+        text-align: left;
+        columns: 2;
+        list-style-type: disc;
+    }
 
-   footer{
-       background-color: #f9cdc8;
-   }
+    footer {
+        background-color: #f9cdc8;
+    }
 
-   footer *{
-       display: inline-block;
-   }
+    footer * {
+        display: inline-block;
+    }
 
 }
 
